[package]
name = "rpatchur"
version = "0.1.0"
authors = ["LinkZ <wanthost@gmail.com>"]
edition = "2018"

[dependencies]
web-view = "^0.6"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.10", features = ["blocking"] }
url = "2.1"
tempfile = "3"
nom = "^5.1"
flate2 = "1.0"
encoding = "0.2"

[dev-dependencies]
twox-hash = "^1.5"
hex-literal = "^0.2"