[package]
name = "rpatchur"
version = "0.1.0"
authors = ["LinkZ <wanthost@gmail.com>"]
edition = "2018"

[profile.release]
lto = true

[dependencies]
web-view = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.10", features = ["blocking"] }
url = "2.1"
tempfile = "3.1"
nom = "5.1"
flate2 = "1.0"
encoding = "0.2"
log = "0.4"
simple_logger = "1.6"
crc = "1.8"
bincode = "1.2"

[dev-dependencies]
twox-hash = "1.5"
hex-literal = "0.2"
walkdir = "2.3"
