[package]
name = "rpatchur"
version = "0.1.0"
authors = ["LinkZ <wanthost@gmail.com>"]
edition = "2018"
build = "build.rs"

[package.metadata.winres]
FileDescription = "A customizable patcher for Ragnarok Online"
ProductName = "RPatchur"
ProductVersion = "0.1.0"
LegalCopyright = "Copyright © 2020 rpatchur developers"

[profile.release]
lto = true

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dependencies]
web-view = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.10", features = ["blocking"] }
url = "2.1"
tempfile = "3.1"
nom = "5.1"
flate2 = "1.0"
encoding = "0.2"
log = { version = "0.4", features = ["release_max_level_off"] }
simple_logger = "1.6"
crc = "1.8"
bincode = "1.2"

[target.'cfg(windows)'.dependencies]
winapi = "0.3"

[dev-dependencies]
twox-hash = "1.5"
hex-literal = "0.2"
walkdir = "2.3"
